<resources>
    <string name="app_name">SettingsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="check_box_pref_tiletle" />
    <string name="title_checkbox_pref">Checkbox</string>
    <string name="summary_checkbox">This provides checkbox settings functionality</string>
    <string name="list_prefernec">List Preference</string>
    <string name="list_pref_summary">This demostrate list preference</string>
    <string name="edittext_title">EditText</string>
    <string name="edittext_summary">This demostrate edittext prefernece</string>
    <string name="google_page">Google page</string>
    <string name="pref_category_1">Category 1</string>
    <string name="pref_category_2">Category 2</string>
    <string name="voicemail_ringtone_title">Ringtone</string>

    <string-array name="list_pre">
        <item>Choice 1</item>
        <item>Choice 2</item>
        <item>Choice 3</item>
        <item>Choice 4</item>
    </string-array>
    <string name="title_activity_settings1">Settings</string>

    <string name="string_header1">Header1</string>
    <string name="string_header1_summary">Header 1 description</string>

    <string name="string_header2">Header2</string>
    <string name="string_header2_summary">Header 2 description</string>


</resources>
